fix: enhance course sorting UI and improve styling for better visibility

--- a/flash_cards/resources/styles.css
+++ b/flash_cards/resources/styles.css
@@ -53,16 +53,18 @@ button {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #2c3e50;
     margin-bottom: 15px;
 }
 
 #headline {
     margin: 0;
+    color: white;
 }
 
 #sub-headline {
     margin: 5px 0 0 0;
+    color: white;
 }
 
 #user {
@@ -192,7 +194,7 @@ button {
         border-radius: 5px;
         padding: 10px;
         margin: 10px 0;
-        background-color: #d2e5db;
+        background-color: #b9cce2;
     }
 
     #card-header {
@@ -221,7 +223,7 @@ button {
 
     #card-decks {
         #card {
-            background-color: #fcefd3;
+            background-color: #f1f1e6;
         }
     }
 
@@ -337,6 +339,11 @@ button {
     }
 
     #back-button {
+        align-self: flex-start;
+    }
+
+    #description {
+        margin-bottom: 30px;
         align-self: flex-start;
     }
 
